[UPDATE] new cmake txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,15 @@
 cmake_minimum_required(VERSION 3.10)
 project(core)
 
+set(CMAKE_PREFIX_PATH "/usr/include")
+
 set(CMAKE_CXX_STANDARD 11)
 
 # Include direktori header
 include_directories(include)
 
-# Temukan nlohmann_json
-find_package(nlohmann_json 3.0 REQUIRED)
+set(nlohmann_json_DIR "/usr/lib/cmake/nlohmann_jsonConfig.cmake")
+
 
 # Temukan semua file sumber
 file(GLOB SOURCES "src/*.cpp")
